parses the first file

--- a/package.json
+++ b/package.json
@@ -6,5 +6,10 @@
   "repository": "git@github.com:mvcds/ubi.git",
   "author": "Marcos Vinícius C. da Silva <marvinc.silva@gmail.com>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "glob": "^7.1.2",
+    "js-yaml": "^3.11.0",
+    "write": "^1.0.3"
+  }
 }
