--- a/package.json
+++ b/package.json
@@ -7,9 +7,23 @@
   "author": "Marcos Vinícius C. da Silva <marvinc.silva@gmail.com>",
   "license": "MIT",
   "private": false,
+  "watch": {
+    "test": {
+      "patterns": ["src"],
+      "extensions": "js,feature",
+      "quiet": true
+    },
+    "coverage": {
+      "patterns": ["src"],
+      "extensions": "js,feature",
+      "quiet": true
+    }
+  },
   "scripts": {
     "test": "cucumber-js src/Domain/UseCases/**/*.feature --require src/Domain/UseCases/**/*.steps.js",
-    "coverage": "nyc yarn test"
+    "test:watch": "npm-watch test",
+    "coverage": "nyc yarn test",
+    "coverage:watch": "npm-watch coverage"
   },
   "dependencies": {
     "glob": "^7.1.2",
@@ -18,6 +32,7 @@
   },
   "devDependencies": {
     "cucumber": "^4.0.0",
+    "npm-watch": "^0.3.0",
     "nyc": "^11.6.0",
     "sinon": "^4.4.8"
   },
