--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     }
   },
   "scripts": {
-    "test": "cucumber-js src/Domain/UseCases/**/*.feature --require src/Domain/UseCases/**/*.steps.js",
+    "test": "yarn test:unit && yarn test:integration",
+    "test:integration": "cucumber-js src/Domain/UseCases/**/*.feature --require src/Domain/UseCases/**/*.steps.js",
+    "test:unit": "mocha src/**/*.test.js --colors --sort --bail --recursive",
     "test:watch": "npm-watch test",
     "coverage": "nyc yarn test",
     "coverage:watch": "npm-watch coverage",
@@ -40,6 +42,7 @@
   "devDependencies": {
     "cucumber": "^4.0.0",
     "husky": "^0.14.3",
+    "mocha": "^5.0.5",
     "npm-watch": "^0.3.0",
     "nyc": "^11.6.0",
     "sinon": "^4.4.8"
@@ -56,14 +59,14 @@
     ],
     "exclude": [
       "src/**/*.steps.js",
-      "src/CLI"
+      "src/**/*.test.js"
     ],
     "reporter": [
       "lcov",
       "text-summary"
     ],
     "cache": true,
-    "all": true
+    "all": false
   },
   "bin": {
     "ubi": "./index.js"
