--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "test:watch": "npm-watch test",
     "coverage": "nyc yarn test",
     "coverage:watch": "npm-watch coverage",
-    "precommit": "yarn coverage"
+    "lint": "standard --env mocha | snazzy",
+    "lint:fix": "standard --env mocha | snazzy",
+    "precommit": "yarn lint:fix && yarn coverage"
   },
   "dependencies": {
     "colors": "^1.2.1",
@@ -45,7 +47,9 @@
     "mocha": "^5.0.5",
     "npm-watch": "^0.3.0",
     "nyc": "^11.6.0",
-    "sinon": "^4.4.8"
+    "sinon": "^4.4.8",
+    "snazzy": "^7.1.1",
+    "standard": "^11.0.1"
   },
   "nyc": {
     "check-coverage": true,
