parse from a known type

--- a/src/Domain/Entities/Entity/entity.yml
+++ b/src/Domain/Entities/Entity/entity.yml
@@ -2,4 +2,5 @@ name: Entity
 description: An object which has an identity that defines it
 attributes:
   - name
-  - description
+  - name: description
+    type: string
