--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
       "extensions": "js,feature",
       "quiet": true
     },
+    "test:unit": {
+      "patterns": [
+        "src"
+      ],
+      "extensions": "js,feature",
+      "quiet": true
+    },
     "coverage": {
       "patterns": [
         "src"
@@ -26,7 +33,8 @@
   "scripts": {
     "test": "yarn test:unit && yarn test:integration",
     "test:integration": "cucumber-js src/Domain/UseCases/**/*.feature --require src/Domain/UseCases/**/*.steps.js",
-    "test:unit": "mocha src/**/*.test.js --colors --sort --bail --recursive",
+    "test:unit": "mocha \"src/**/*.test.js\" --colors --sort --bail --recursive",
+    "test:unit:watch": "npm-watch test:unit",
     "test:watch": "npm-watch test",
     "coverage": "nyc yarn test",
     "coverage:watch": "npm-watch coverage",
