parses required values

--- a/package.json
+++ b/package.json
@@ -12,27 +12,35 @@
       "patterns": [
         "src"
       ],
-      "extensions": "js,feature",
+      "extensions": "js,feature,fixture",
       "quiet": true
     },
     "test:unit": {
       "patterns": [
         "src"
       ],
-      "extensions": "js,feature",
+      "extensions": "js,feature,fixture",
+      "quiet": true
+    },
+    "test:integration": {
+      "patterns": [
+        "src"
+      ],
+      "extensions": "js,feature,fixture",
       "quiet": true
     },
     "coverage": {
       "patterns": [
         "src"
       ],
-      "extensions": "js,feature",
+      "extensions": "js,feature,fixture",
       "quiet": true
     }
   },
   "scripts": {
     "test": "yarn test:unit && yarn test:integration",
-    "test:integration": "cucumber-js src/Domain/UseCases/**/*.feature --require src/Domain/UseCases/**/*.steps.js",
+    "test:integration": "cucumber-js src/Domain/UseCases/**/*.feature",
+    "test:integration:watch": "npm-watch test:integration",
     "test:unit": "mocha \"src/**/*.test.js\" --colors --sort --bail --recursive",
     "test:unit:watch": "npm-watch test:unit",
     "test:watch": "npm-watch test",
