--- a/src/Domain/Entities/Entity/entity.yml
+++ b/src/Domain/Entities/Entity/entity.yml
@@ -1,6 +1,7 @@
 name: Entity
 description: An object which has an identity that defines it
 attributes:
-  - name
+  - name: name
+    required: true
   - name: description
-    type: string
+    required: true
