--- a/src/Domain/Objects/Translators/translator.yml
+++ b/src/Domain/Objects/Translators/translator.yml
@@ -2,5 +2,5 @@ name: Translator
 description: An object which translate the entity's attributes to a given language
 attributes:
   - name: entity
-    type: object
+    type: Entity
     required: true
