--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "devDependencies": {
     "cucumber": "^4.0.0",
+    "faker": "^4.1.0",
     "husky": "^0.14.3",
     "mocha": "^5.0.5",
     "npm-watch": "^0.3.0",
