--- a/src/Domain/Objects/Translator/translator.yml
+++ b/src/Domain/Objects/Translator/translator.yml
@@ -1,5 +1,5 @@
 name: Translator
-description: An object which translate the entity's attributes to a given language
+description: An object which translate the object's attributes to a given language
 attributes:
   - name: entities
     type: array
