--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "scripts": {
     "test": "yarn test:unit && yarn test:integration",
-    "test:integration": "cucumber-js \"src/Domain/**/*.feature\"",
+    "test:integration": "cucumber-js \"src/Domain/UseCases/**/*.feature\"",
     "test:integration:watch": "npm-watch test:integration",
     "test:unit": "mocha \"src/**/*.test.js\" --colors --sort --bail --recursive",
     "test:unit:watch": "npm-watch test:unit",
