--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "ubi",
+  "name": "hubi",
   "version": "0.0.0",
   "description": "Ubiquitous language helper",
   "main": "index.js",
-  "repository": "git@github.com:mvcds/ubi.git",
+  "repository": "git@github.com:mvcds/hubi.git",
   "author": "Marcos Vinícius C. da Silva <marvinc.silva@gmail.com>",
   "license": "MIT",
   "private": false,
@@ -92,6 +92,6 @@
     "all": true
   },
   "bin": {
-    "ubi": "./index.js"
+    "hubi": "./index.js"
   }
 }
