--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "lint:fix": "(yarn standard --fix) | snazzy",
     "validate": "yarn lint:fix && yarn coverage",
     "precommit": "yarn validate",
-    "prepack": "yarn validate"
+    "prepack": "yarn validate",
+    "bump": "np"
   },
   "dependencies": {
     "colors": "^1.2.1",
@@ -65,6 +66,7 @@
     "faker": "^4.1.0",
     "husky": "^0.14.3",
     "mocha": "^5.0.5",
+    "np": "^2.20.1",
     "npm-watch": "^0.3.0",
     "nyc": "^11.6.0",
     "sinon": "^4.4.8",
