--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lint": "(yarn standard) | snazzy",
     "lint:fix": "(yarn standard --fgit ix) | snazzy",
     "validate": "yarn lint:fix && yarn coverage",
+    "precommit": "yarn validate",
     "bump": "np"
   },
   "dependencies": {
@@ -62,6 +63,7 @@
   "devDependencies": {
     "cucumber": "^4.0.0",
     "faker": "^4.1.0",
+    "husky": "^0.14.3",
     "mocha": "^5.0.5",
     "np": "^2.20.1",
     "npm-watch": "^0.3.0",
