Revert "try to not cleanup"
This reverts commit e7154871429b120fd24eca50c2f9e374c3fed193.

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "lint:fix": "(yarn standard --fgit ix) | snazzy",
     "validate": "yarn lint:fix && yarn coverage",
     "precommit": "yarn validate",
-    "bump": "np  --no-cleanup"
+    "bump": "np"
   },
   "dependencies": {
     "colors": "^1.2.1",
