format HTML correctly

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "colors": "^1.2.1",
     "commander": "^2.15.1",
     "glob": "^7.1.2",
+    "htmltidy": "^0.0.6",
     "js-yaml": "^3.11.0",
     "pug": "^2.0.3",
     "write": "^1.0.3"
