generate the hubi's site

--- a/src/Domain/Entities/DomainFile/domain-file.yml
+++ b/src/Domain/Entities/DomainFile/domain-file.yml
@@ -1,11 +1,14 @@
 name: Domain File
-description: A file containing ubiquitous information
+description: A file containing information about a particular piece of the ubiquitous language which will be transformed into a token
 attributes:
   - name: name
+    description: How people refer to the token (should be unique across the domain to avoid ambiguity)
     required: true
   - name: description
+    description: A short sentence to teach or remind everyone what that token means
     required: true
   - name: attributes
+    description: A collection of attributes a token is associated with (this collection is specially useful for developers)
     type: array
     of: Attribute
     required: true
