--- a/src/Domain/Objects/UbiquitousLanguage/ubiquitous-token.yml
+++ b/src/Domain/Objects/UbiquitousLanguage/ubiquitous-token.yml
@@ -1,6 +1,7 @@
 name: Ubiquitous Token
-description: A piece of the ubiquitous language
+description: A piece of the ubiquitous language (phrase, expression, term, etc)
 attributes:
   - name: entity
-    required: true
+    description: The entity held by the token
     type: Entity
+    required: true
