--- a/src/Domain/Objects/Translator/translator.yml
+++ b/src/Domain/Objects/Translator/translator.yml
@@ -1,7 +1,10 @@
 name: Translator
-description: An object which translate the object's attributes to a given language
+description: An object which translates the tokens' into relevant source files for developers
 attributes:
-  - name: entities
-    type: array
-    of: Entity
+  - name: ubiquitousLanguage
+    description: The language the translator will work on
+    type: Ubiquitous Language
     required: true
+  # - name: translateEntity
+  #   type: function
+  #   arguments:
