--- a/src/Domain/Objects/UbiquitousLanguage/ubiquitous-language.yml
+++ b/src/Domain/Objects/UbiquitousLanguage/ubiquitous-language.yml
@@ -2,6 +2,7 @@ name: Ubiquitous Language
 description: A common language for everybody
 attributes:
   - name: entities
+    description: A collection of entities which will be transformed into tokens
     required: true
     type: array
     of: Entity
