--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,4 @@ before_install:
   - sudo apt-get install libc6:i386 libncurses5:i386 libstdc++6:i386
 cache:
   yarn: true
+after_success: 'yarn coveralls'
