--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "release:pre": "git checkout . && git clean -fd && git pull && yarn validate",
     "release:pos": "yarn document && git add . && git commit --no-verify -m \"fix version\" && git push",
     "document": "node index s -t site -o docs && mv docs/hubi.hubi.html docs/index.html",
-    "coveralls": "yarn coverage && nyc report --reporter=text-lcov | coveralls"
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
     "colors": "^1.2.1",
