--- a/src/Domain/Objects/UbiquitousLanguage/ubiquitous-language.yml
+++ b/src/Domain/Objects/UbiquitousLanguage/ubiquitous-language.yml
@@ -1,8 +1,8 @@
 name: Ubiquitous Language
 description: A common language for everybody
 attributes:
-  - name: entities
-    description: A collection of entities which will be transformed into tokens
+  - name: tokens
+    description: A collection of ubiquitous tokens
     required: true
     type: array
-    of: Entity
+    of: Ubiquitous Token
