--- a/package.json
+++ b/package.json
@@ -39,6 +39,14 @@
       ],
       "extensions": "js,feature,fixture,pug",
       "quiet": true
+    },
+    "document": {
+      "patterns": [
+        "src",
+        "docs"
+      ],
+      "extensions": "js,feature,fixture,pug,css",
+      "quiet": true
     }
   },
   "scripts": {
@@ -60,6 +68,7 @@
     "release:pre": "git checkout . && git clean -fd && git pull && yarn validate",
     "release:pos": "yarn document && git add . && git commit --no-verify -m \"fix version\" && git push",
     "document": "node index s -t site -o docs && mv docs/hubi.hubi.html docs/index.html",
+    "document:watch": "npm-watch document",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "test:release": "find src -type f \\( -iname \\*.feature -o -iname \\*.test.js \\)"
   },
