--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "validate": "yarn lint:fix && yarn coverage",
     "precommit": "yarn validate",
     "release": "yarn release:pre && release-it --non-interactive && yarn release:pos",
+    "release:minor": "yarn release:pre && release-it minor --non-interactive && yarn release:pos",
     "release:major": "yarn release:pre && release-it major --non-interactive && yarn release:pos",
     "release:pre": "git checkout . && git clean -fd && yarn validate",
     "release:pos": "yarn document && git add . && git commit --no-verify -m \"fix version\" && git push",
