--- a/src/Domain/Objects/Translator/translator.yml
+++ b/src/Domain/Objects/Translator/translator.yml
@@ -5,6 +5,11 @@ attributes:
     description: The language the translator will work on
     type: Ubiquitous Language
     required: true
+  - name: tokens
+    description: The tokens the translator will work on
+    type: array
+    of: Ubiquitous Token
+    deprecated: Renamed to "ubiquitousLanguage"
   # - name: interpretToken
   #   type: function
   #   arguments:
