--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "release": "yarn release:pre && release-it --non-interactive && yarn release:pos",
     "release:minor": "yarn release:pre && release-it minor --non-interactive && yarn release:pos",
     "release:major": "yarn release:pre && release-it major --non-interactive && yarn release:pos",
-    "release:pre": "git checkout . && git clean -fd && yarn validate",
+    "release:pre": "git checkout . && git clean -fd && git push -u && yarn validate",
     "release:pos": "yarn document && git add . && git commit --no-verify -m \"fix version\" && git push",
     "document": "node index s -t site -o docs && mv docs/hubi.hubi.html docs/index.html",
     "document:watch": "npm-watch document",
