--- a/src/Domain/Objects/AttributeParser/Attributes/attribute.yml
+++ b/src/Domain/Objects/AttributeParser/Attributes/attribute.yml
@@ -11,5 +11,5 @@ attributes:
     type: boolean
     default: false
   - name: description
-    description: Aa short sentence to teach or remind everyone what that attribute means
+    description: A short sentence to teach or remind everyone what that attribute means
   # - name: deprecated
