--- a/package.json
+++ b/package.json
@@ -68,13 +68,12 @@
     "release:major": "yarn release:pre && release-it major --non-interactive && yarn release:pos",
     "release:pre": "git checkout . && git clean -fd && git push -u && yarn validate",
     "release:pos": "yarn document && git add . && git commit --no-verify -m \"fix version\" && git push",
-    "document": "node index s -t site -o docs && mv docs/hubi.hubi.html docs/index.html",
+    "document": "node src/CLI/hubi s -t site -o docs && mv docs/hubi.hubi.html docs/index.html",
     "document:watch": "npm-watch document",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "test:release": "find src -type f \\( -iname \\*.feature -o -iname \\*.test.js \\)"
   },
   "dependencies": {
-    "colors": "^1.2.1",
     "commander": "^2.15.1",
     "glob": "^7.1.2",
     "htmltidy": "^0.0.6",
@@ -119,7 +118,7 @@
     "all": true
   },
   "bin": {
-    "hubi": "./index.js"
+    "hubi": "./src/CLI/hubi"
   },
   "engines": {
     "node": ">=8.9.4",
