--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubi",
-  "version": "3.7.1-git",
+  "version": "3.7.1",
   "description": "Humanitarian ubiquitous language helper",
   "main": "index.js",
   "repository": {
