add file to the path into domain and token

--- a/src/Domain/Entities/DomainFile/ubiquitous-token.yml
+++ b/src/Domain/Entities/DomainFile/ubiquitous-token.yml
@@ -5,3 +5,5 @@ attributes:
     description: The object held by the token
     type: Domain File
     required: true
+  - name: filePath
+    description: A path to its object
