--- a/src/Domain/Entities/DomainFile/domain-file.yml
+++ b/src/Domain/Entities/DomainFile/domain-file.yml
@@ -14,3 +14,4 @@ attributes:
     required: true
   - name: filePath
     description: A path to it
+# deprecation can be a string, a boolean or an object
