do not require attributes to create a token

--- a/src/Domain/Entities/UbiquitousToken/ubiquitous-token.yml
+++ b/src/Domain/Entities/UbiquitousToken/ubiquitous-token.yml
@@ -1,6 +1,5 @@
 name: Ubiquitous Token
 description: A piece of the ubiquitous language (phrase, expression, term, etc) extracted from the domain file
-# it should "extend domain-file"
 attributes:
   - name: name
     description: How people refer to the token (should be unique across the domain to avoid ambiguity)
@@ -12,7 +11,7 @@ attributes:
     description: A collection of attributes a token is associated with (this collection is specially useful for developers)
     type: array
     of: Attribute
-    required: true
+    required: false
   - name: filePath
     description: The path to its file domain
     required: true
