--- a/src/Domain/Entities/UbiquitousToken/domain-file.yml
+++ b/src/Domain/Entities/UbiquitousToken/domain-file.yml
@@ -1,4 +1,4 @@
 name: Domain File
 description: An YAML file containing information about a particular piece of the ubiquitous language.
-deprecated: Not all domain files translate to  source files e.g. this very one! # TODO: the line above should be a note or message, instead of deprecated
+comment: Not all domain files translate to  source files due to the "abstract" configuration e.g. this very one!
 abstract: true
