--- a/src/Domain/Entities/UbiquitousToken/ubiquitous-token.yml
+++ b/src/Domain/Entities/UbiquitousToken/ubiquitous-token.yml
@@ -20,5 +20,6 @@ attributes:
   - name: abstract
     description: A flag to inform translators if they should or not translate the token
     type: boolean
+    default: false
   - name: comment
     description: An extra message, for developers, about the token
