--- a/package.json
+++ b/package.json
@@ -71,16 +71,18 @@
     "lint:fix": "(yarn standard --fix) | snazzy",
     "validate": "yarn lint:fix && yarn coverage",
     "precommit": "yarn validate",
-    "release": "yarn release:pre && release-it --non-interactive && yarn release:pos",
-    "release:minor": "yarn release:pre && release-it minor --non-interactive && yarn release:pos",
-    "release:major": "yarn release:pre && release-it major --non-interactive && yarn release:pos",
-    "release:pre": "git checkout . && git clean -fd && git push -u && yarn validate",
-    "release:pos": "yarn document && git add . && git commit --no-verify -m \"fix version\" && git push",
+    "release": "yarn release:pre && release-it --non-interactive",
+    "release:minor": "yarn release:pre && release-it minor --non-interactive",
+    "release:major": "yarn release:pre && release-it major --non-interactive",
+    "release:pre": "yarn dogfood:release && git push -u",
     "document": "node src/CLI/hubi s -t site -o docs && mv docs/index.hubi.html docs/index.html",
     "document:watch": "npm-watch document",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "dogfood": "node src/CLI/hubi s -st joi",
-    "dogfood:watch": "npm-watch dogfood"
+    "dogfood:watch": "npm-watch dogfood",
+    "dogfood:release": "yarn clean && yarn build && yarn validate && git add . && git commit --no-verify -m \"dogfood on release\"",
+    "clean": "git checkout . && git clean -fd",
+    "build": "yarn dogfood & yarn document"
   },
   "dependencies": {
     "commander": "^2.15.1",
