--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "commander": "^2.15.1",
     "glob": "^7.1.2",
     "htmltidy": "^0.0.6",
+    "joi": "^13.2.0",
     "js-yaml": "^3.11.0",
     "pug": "^2.0.3",
     "write": "^1.0.3"
