--- a/package.json
+++ b/package.json
@@ -74,13 +74,13 @@
     "release": "yarn release:pre && release-it --non-interactive",
     "release:minor": "yarn release:pre && release-it minor --non-interactive",
     "release:major": "yarn release:pre && release-it major --non-interactive",
-    "release:pre": "yarn dogfood:release && git push -u",
+    "release:pre": "yarn clean && yarn validate && git push -u",
+    "release:pos": "yarn build && git add . && git commit --no-verify -m \"dogfood on release\" && git push",
     "document": "node src/CLI/hubi s -t site -o docs && mv docs/index.hubi.html docs/index.html",
     "document:watch": "npm-watch document",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "dogfood": "node src/CLI/hubi s -st joi",
     "dogfood:watch": "npm-watch dogfood",
-    "dogfood:release": "yarn clean && yarn build && yarn validate && git add . && git commit --no-verify -m \"dogfood on release\"",
     "clean": "git reset . && git checkout . && git clean -fd",
     "build": "yarn dogfood & yarn document"
   },
