--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubi",
-  "version": "4.4.0",
+  "version": "4.4.1",
   "description": "Humanitarian ubiquitous language helper",
   "main": "index.js",
   "repository": {
@@ -71,9 +71,9 @@
     "lint:fix": "(yarn standard --fix) | snazzy",
     "validate": "yarn lint:fix && yarn coverage",
     "precommit": "yarn validate",
-    "release": "yarn release:pre && release-it --non-interactive",
-    "release:minor": "yarn release:pre && release-it minor --non-interactive",
-    "release:major": "yarn release:pre && release-it major --non-interactive",
+    "release": "yarn release:pre && release-it --non-interactive && yarn release:pos",
+    "release:minor": "yarn release:pre && release-it minor --non-interactive && yarn release:pos",
+    "release:major": "yarn release:pre && release-it major --non-interactive && yarn release:pos",
     "release:pre": "yarn clean && yarn validate && git push -u",
     "release:pos": "yarn build && git add . && git commit --no-verify -m \"dogfood on release\" && git push",
     "document": "node src/CLI/hubi s -t site -o docs && mv docs/index.hubi.html docs/index.html",
