--- a/src/Domain/Entities/UbiquitousToken/domain-file.yml
+++ b/src/Domain/Entities/UbiquitousToken/domain-file.yml
@@ -2,3 +2,5 @@ name: Domain File
 description: An YAML file containing information about a particular piece of the ubiquitous language.
 comment: Not all domain files translate to  source files due to the "abstract" configuration e.g. this very one!
 abstract: true
+aliases:
+  - Configuration File
