--- a/src/Domain/Objects/AttributeParser/Attributes/attribute.yml
+++ b/src/Domain/Objects/AttributeParser/Attributes/attribute.yml
@@ -18,3 +18,6 @@ attributes:
   # - name: deprecated # can be a string, a boolean or an object
   - name: comment
     description: An extra message, for developers, about the attribute
+aliases:
+  - Characteristic
+  - Member
