--- a/src/Domain/Objects/Translator/translator.yml
+++ b/src/Domain/Objects/Translator/translator.yml
@@ -1,10 +1,11 @@
 name: Translator
 description: Interpret the ubiquitous language's tokens in order to write source files automatically.
-attributes: []
-  # TODO: add functions as attributes
-  # - name: interpretToken
-  #   type: function
-  #   arguments:
+attributes:
+  - name: interpretToken
+    type: function
+    required: true
+    description: How each ubiquitous language's token is interpreted during translation
+    comment: ("Interface")
 abstract: true
 aliases:
   - Plugin
