--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "homepage": "https://mvcds.github.io/hubi",
   "license": "MIT",
   "private": false,
+  "reveal": true,
   "watch": {
     "test": {
       "patterns": [
