--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,13 @@ before_install:
 cache:
   yarn: true
 after_success: 'yarn coveralls'
+jobs:
+  include:
+    - stage: release
+      if: branch = master
+      node_js: lts/*
+      deploy:
+        provider: script
+        skip_cleanup: true
+        script:
+          - npx semantic-release
