--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,6 @@ jobs:
         provider: script
         skip_cleanup: true
         script:
+          - yarn build
+          - git add . && git commit --no-verify -m \"dogfood pre-release\"
           - npx semantic-release
