--- a/package.json
+++ b/package.json
@@ -131,7 +131,8 @@
   },
   "engines": {
     "node": ">=8.9.4",
-    "npm": ">=5.6.0"
+    "npm": ">=5.6.0",
+    "yarn": ">=1.13.0"
   },
   "standard": {
     "env": [
