--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "author": "Marcos Vinícius C. da Silva <marvinc.silva@gmail.com>",
   "homepage": "https://mvcds.github.io/hubi",
-  "license": "MIT",
-  "private": false,
+  "license": "MIT", "private": false,
   "reveal": true,
   "watch": {
     "test": {
@@ -132,7 +131,7 @@
   "engines": {
     "node": ">=8.9.4",
     "npm": ">=5.6.0",
-    "yarn": ">=1.13.0"
+    "yarn": "1.3.2"
   },
   "standard": {
     "env": [
