--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ jobs:
   include:
     - stage: release
       if: branch = master
-      node_js: lts/*
+      node_js:
+        - "8.9.4"
       deploy:
         provider: script
         skip_cleanup: true
