--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ before_install:
   - sudo apt-get install libc6:i386 libncurses5:i386 libstdc++6:i386
 cache:
   yarn: true
-after_success: 'yarn coveralls'
+after_success:
+  - mkdir .nyc_output
+  - yarn coveralls
 jobs:
   include:
     - stage: release
