--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "precommit": "yarn validate",
     "document": "node src/CLI/hubi s -t site -o docs && mv docs/index.hubi.html docs/index.html",
     "document:watch": "npm-watch document",
-    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "coveralls": "cat ./nyc_output/lcov.info | coveralls",
     "dogfood": "node src/CLI/hubi s -st joi",
     "dogfood:watch": "npm-watch dogfood",
     "build": "yarn dogfood & yarn document"
