--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ jobs:
         provider: script
         skip_cleanup: true
         script:
-          - yarn build
+          - yarn build & yarn test
           - git add . && git commit --no-verify -m \"dogfood pre-release\"
           - npx semantic-release
