--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,7 @@ before_install:
   - sudo apt-get install libc6:i386 libncurses5:i386 libstdc++6:i386
 cache:
   yarn: true
-after_success:
-  - mkdir .nyc_output
-  - yarn coveralls
+# after_success: "yarn coveralls"
 jobs:
   include:
     - stage: release
