--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,12 @@ jobs:
         skip_cleanup: true
         before_deploy:
           - mkdir ./.nyc_output
+          - openssl aes-256-cbc -K $encrypted_dc2adf587a89_key -iv $encrypted_dc2adf587a89_iv -in .travis.secrets.tar.enc -out .travis.secrets.tar -d
+          - tar -xvf .travis.secrets.tar
+          - rm .travis.secrets.tar
+          - gpg --import travis.gpg
+          - rm travis.gpg
+          - mv settings.xml $HOME/.m2/settings.xml
         after_success:
           - yarn coveralls
         script:
