--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ jobs:
         after_success:
           - yarn coveralls
         script: >-
-          yarn build
-          git add . && git commit --no-verify -m \"dogfood pre-release\"
+          yarn build &&
+          git add . &&
+          git commit --no-verify -m \"dogfood pre-release\" &&
           npx semantic-release
