--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ jobs:
         skip_cleanup: true
         before_deploy:
           - mkdir ./.nyc_output
+          - sudo apt-get install git
           # - openssl aes-256-cbc -K $encrypted_dc2adf587a89_key -iv $encrypted_dc2adf587a89_iv -in .travis.secrets.tar.enc -out .travis.secrets.tar -d
           # - tar -xvf .travis.secrets.tar
           # - rm .travis.secrets.tar
